# trab-u2-edb2

./: .gitignore  README.md  TODOs.md
latex/: main.tex  references.bib
latex/chapters/: 01_analise_teorica.tex  01_binaria.tex  02_analise_algoritmo.tex  02_auto_balanceaveis.tex  03_heap.tex  04_enviroment.tex
latex/chapters/.auctex-auto/: 02_analise_algoritmo.el
latex/chapters/01_sections/: 01_bubble_sort.tex  02_merge_sort.tex  03_quick_sort.tex
latex/chapters/02_sections/: 01_avl.tex  02_funcao_iterativa.tex  02_rubro_negra.tex  03_funcao_recursiva.tex  04_implementacao_ordenacao.tex  05_performance_ordenacao.tex
latex/output/: main.bbl  main.blg  main.fdb_latexmk  main.fls  main.toc
latex/styles/: CS_report.sty
src/cpp/: CMakeLists.txt  main  main.cpp
src/cpp/output/: gfg  main
src/cpp/src/: main.cpp
src/cpp/src/output/: main
src/cpp/tests/: CMakeLists.txt  tests.cpp
src/haskell/: AVLTree.hs  Direction.hs  RBTree.hs  RedBlackTree.hs
src/haskell/AVLTree/: AVLTree.hs  Core.hs  Directions.hs  Examples.hs  Show.hs
src/haskell/RBTree/: Core.hs  Show.hs
src/haskell/RedBlackTree/: Core.hs  Show.hs
src/rust/: Cargo.toml
src/rust/src/: algorithms.rs  heap.rs  lib.rs  main.rs
src/rust/tests/: test_heap.rs  test_sorts.rs
